--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "21.7.3"
+  },
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
