--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name",
+  "name": "work",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,6 @@
     "nodemon": "^2.0.7"
   },
   "engines": {
-    "node": "20.x"
+    "node": "21.7.3"
   }
 }
